--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
 <meta name="robots" content="index, follow">
 
 <!-- Canonical Link -->
-<link rel="canonical" href="https://alzamanrestaurant.com.sa/">
+<link rel="canonical" href="https://zamanrestaurant.netlify.app/">
 
 <!-- Open Graph Meta Tags -->
 <meta property="og:locale" content="ar_AR">
 <meta property="og:type" content="website">
 <meta property="og:title" content="أفضل الأكلات الشعبية اليمنية في مكة | مطعم الزمن القديم">
 <meta property="og:description" content="مطعم الزمن القديم يقدم لك أفضل الأكلات الشعبية اليمنية في مكة المكرمة. اطلب الطعام الآن عبر موقعنا واستمتع بتجربة لا تُنسى من المندي، السلتة، والكبسة اليمنية.">
-<meta property="og:url" content="https://alzamanrestaurant.com.sa/">
+<meta property="og:url" content="https://zamanrestaurant.netlify.app/">
 <meta property="og:site_name" content="مطعم الزمن القديم">
 <meta property="og:image" content="https://i.postimg.cc/d0Yq5yKL/image.png">
 
@@ -41,7 +41,7 @@
 <meta name="twitter:description" content="مطعم الزمن القديم في مكة يقدم ألذ الأكلات الشعبية اليمنية. اطلب طعامك الآن أونلاين واستمتع بخدمة توصيل سريعة ومريحة إلى منزلك.">
 <meta name="twitter:title" content="أفضل الأكلات الشعبية اليمنية في مكة | مطعم الزمن القديم">
 <meta name="twitter:image" content="https://i.postimg.cc/d0Yq5yKL/image.png">
-<meta name="twitter:url" content="https://alzamanrestaurant.com.sa/">
+<meta name="twitter:url" content="https://zamanrestaurant.netlify.app/">
 
 <!-- Structured Data for Contact Information (Schema Markup) -->
 <script type="application/ld+json">
@@ -49,11 +49,11 @@
   "@context": "http://schema.org",
   "@type": "Organization",
   "name": "مطعم الزمن القديم",
-  "url": "https://alzamanrestaurant.com.sa/",
+  "url": "https://zamanrestaurant.netlify.app/",
   "logo": "https://i.postimg.cc/d0Yq5yKL/image.png",
   "contactPoint": [{
     "@type": "ContactPoint",
-    "telephone": "966550852093",
+    "telephone": "966559861051",
     "contactType": "customer service",
     "areaServed": "SA",
     "availableLanguage": "Arabic"
@@ -70,7 +70,7 @@
 <link rel="sitemap" type="application/xml" href="https://alzamanrestaurant.com.sa/sitemap.xml">
 
 <!-- Hreflang for multilingual support -->
-<link rel="alternate" href="https://alzamanrestaurant.com.sa/" hreflang="ar-sa">
+<link rel="alternate" href="https://zamanrestaurant.netlify.app/" hreflang="ar-sa">
 
 <!-- Favicon -->
 <link rel="icon" href="https://i.postimg.cc/d0Yq5yKL/image.png" type="image/png">
