--- a/view_category.html
+++ b/view_category.html
@@ -263,7 +263,7 @@ padding: 0;
       }else if (category === 'وجبات منوعة') {
         categoryTitle.textContent = 'وجبات منوعة';
       }else if (category === 'all') {
-        categoryTitle.textContent = 'كل العقارات';
+        categoryTitle.textContent = 'كل الاصناف';
       } else {
         categoryTitle.textContent = 'المنتجات'; // افتراض إذا لم يتم تحديد قيمة
       }
