--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
 <meta name="robots" content="index, follow">
 
 <!-- Canonical Link -->
-<link rel="canonical" href="https://zamanrestaurant.netlify.app/">
+<link rel="canonical" href="https://alzamanrestaurant.com.sa/">
 
 <!-- Open Graph Meta Tags -->
 <meta property="og:locale" content="ar_AR">
 <meta property="og:type" content="website">
 <meta property="og:title" content="أفضل الأكلات الشعبية اليمنية في مكة | مطعم الزمن القديم">
 <meta property="og:description" content="مطعم الزمن القديم يقدم لك أفضل الأكلات الشعبية اليمنية في مكة المكرمة. اطلب الطعام الآن عبر موقعنا واستمتع بتجربة لا تُنسى من المندي، السلتة، والكبسة اليمنية.">
-<meta property="og:url" content="https://zamanrestaurant.netlify.app/">
+<meta property="og:url" content="https://alzamanrestaurant.com.sa/">
 <meta property="og:site_name" content="مطعم الزمن القديم">
 <meta property="og:image" content="https://i.postimg.cc/d0Yq5yKL/image.png">
 
@@ -41,7 +41,7 @@
 <meta name="twitter:description" content="مطعم الزمن القديم في مكة يقدم ألذ الأكلات الشعبية اليمنية. اطلب طعامك الآن أونلاين واستمتع بخدمة توصيل سريعة ومريحة إلى منزلك.">
 <meta name="twitter:title" content="أفضل الأكلات الشعبية اليمنية في مكة | مطعم الزمن القديم">
 <meta name="twitter:image" content="https://i.postimg.cc/d0Yq5yKL/image.png">
-<meta name="twitter:url" content="https://zamanrestaurant.netlify.app/">
+<meta name="twitter:url" content="https://alzamanrestaurant.com.sa/">
 
 <!-- Structured Data for Contact Information (Schema Markup) -->
 <script type="application/ld+json">
@@ -49,11 +49,11 @@
   "@context": "http://schema.org",
   "@type": "Organization",
   "name": "مطعم الزمن القديم",
-  "url": "https://zamanrestaurant.netlify.app/",
+  "url": "https://alzamanrestaurant.com.sa/",
   "logo": "https://i.postimg.cc/d0Yq5yKL/image.png",
   "contactPoint": [{
     "@type": "ContactPoint",
-    "telephone": "966559861051",
+    "telephone": "966550852093",
     "contactType": "customer service",
     "areaServed": "SA",
     "availableLanguage": "Arabic"
@@ -70,7 +70,7 @@
 <link rel="sitemap" type="application/xml" href="https://alzamanrestaurant.com.sa/sitemap.xml">
 
 <!-- Hreflang for multilingual support -->
-<link rel="alternate" href="https://zamanrestaurant.netlify.app/" hreflang="ar-sa">
+<link rel="alternate" href="https://alzamanrestaurant.com.sa/" hreflang="ar-sa">
 
 <!-- Favicon -->
 <link rel="icon" href="https://i.postimg.cc/d0Yq5yKL/image.png" type="image/png">
@@ -186,6 +186,15 @@ width:100px;
           <a class="nav-link text-uppercase" href="#contact">اتصل بنا</a>
         </li>
       </ul>
+     <!-- سلة التسوق -->
+<div class="d-flex align-items-center">
+  <button class="btn" id="cartButton" onclick="goToCart()">
+      <i class="fas fa-shopping-cart" style="font-size: 24px;"></i>
+      <span id="cartCount" class="badge bg-warning text-dark">0</span> <!-- الرقم هنا هو 0 -->
+  </button>        
+</div>
+
+    </div>
     </div>
   </div>
 </nav>
@@ -589,7 +598,7 @@ width:100px;
     </div>
   </div>
   <hr>
-  <p>&copy;تصميم وتطوير <a href="https://wa.me/967779289621">م.فيصل العفريت</a></p>
+  <p>&copy;تصميم وتطوير م.فيصل :967779289621</p>
 </footer>
 
 
@@ -605,5 +614,41 @@ width:100px;
  <!-- Linking SwiperJS script -->
  <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
    <script src="js/main.js"></script>
+
+<script>
+// وظيفة لتوجيه المستخدم إلى صفحة السلة
+function goToCart() {
+    // يمكنك تغيير "cart.html" إلى المسار الذي يتوافق مع صفحة السلة في موقعك
+    window.location.href = 'cart.html'; 
+}
+
+  // قائمة السلة (قد تكون مخزنة في localStorage أو عبر الجلسة)
+let cart = JSON.parse(localStorage.getItem('cart')) || []; // استرجاع السلة من localStorage أو إنشاء سلة فارغة
+
+// وظيفة لإضافة منتج إلى السلة
+function addToCart(product) {
+    // إضافة المنتج إلى السلة
+    cart.push(product);
+    
+    // حفظ السلة في localStorage
+    localStorage.setItem('cart', JSON.stringify(cart));
+    
+    // تحديث العداد
+    updateCartCount();
+}
+
+// وظيفة لتحديث العداد بناءً على عدد المنتجات في السلة
+function updateCartCount() {
+    // تحديث الرقم في عنصر العداد
+    let cartCount = document.getElementById('cartCount');
+    cartCount.textContent = cart.length; // تحديث النص ليكون عدد المنتجات في السلة
+}
+
+// استدعاء دالة لتحديث العداد عندما يتم تحميل الصفحة
+document.addEventListener('DOMContentLoaded', function() {
+    updateCartCount(); // تحديث العداد بناءً على السلة عند تحميل الصفحة
+});
+
+</script>
 </body>
 </html>
