--- a/index.html
+++ b/index.html
@@ -586,7 +586,6 @@ width:100px;
           <h3>معلومات التواصل:</h3>
           <ol>
               <li>الهاتف:966507079844</li>
-              <li>البريد الالكتروني:Ex@gmail.com</li>
           </ol>
       </div>
 
@@ -598,7 +597,7 @@ width:100px;
     </div>
   </div>
   <hr>
-  <p>&copy;تصميم وتطوير م.فيصل :967779289621</p>
+تصميم وتطوير <a href="https://wa.me/966507079844">م.فيصل</a><br>
 </footer>
 
 
