--- a/index.html
+++ b/index.html
@@ -597,7 +597,7 @@ width:100px;
     </div>
   </div>
   <hr>
-تصميم وتطوير <a href="https://wa.me/966507079844">م.فيصل</a><br>
+  <p>&copy;2025 جميع الحقوق محفوظة لموقع مطعم الزمن القديم</p><br>
 </footer>
 
 
