--- a/index.html
+++ b/index.html
@@ -210,7 +210,8 @@ width:100px;
         <h2>مطعم الزمن القديم &nbsp;<span>أفضل مطعم للأكلات الشعبية</span></h2>
         <p class="carousel-text" id="typing-effect1" style="font-size:1.5rem;"></p>
         <div class="d-flex justify-content-center justify-content-lg-start">
-          <a href="https://wa.me/966559861051" class="btn-get-started" style="background-color:#3A6B92;">اطلب الان</a>
+          <a href="https://wa.me/+966507079844" class="btn-get-started" style="background-color:#3A6B92;">اطلب الان</a>
+      
         </div>
       </div>
 
