--- a/index.html
+++ b/index.html
@@ -157,10 +157,10 @@ width:100px;
         <li class="nav-item py-2">
           <a class="nav-link text-uppercase" href="index.html">الرئيسية</a>
         </li>
-        <!-- Dropdown menu for "الاراضي" -->
+  
         <li class="nav-item dropdown py-2">
           <a class="nav-link dropdown-toggle text-uppercase" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-       التصنيفات
+       الأصناف
           </a>
           <ul class="dropdown-menu text-end" aria-labelledby="navbarDropdown">
             <li><a class="dropdown-item" href="view_category.html?category=all">كل الأصناف</a></li>
