--- a/index.html
+++ b/index.html
@@ -244,7 +244,10 @@ width:100px;
   <div class="container mt-4">
     <div class="d-flex overflow-x-auto justify-content-start" style="max-width: 100%; padding:5px;background-color: #fff;
     border: .1rem solid rgba(0,0,0,.1);">
-      
+        <div class="text-center m-1">
+          <a href="view_category.html?category=جديدنا" class="text-decoration-none text-white btn btn-food-filter"">جـديدنا</a>
+        </div>
+
       <div class="text-center m-1">
         <a href="view_category.html?category=all" class="text-decoration-none text-white btn btn-food-filter"">كل الاصناف</a>
       </div>
@@ -288,6 +291,14 @@ width:100px;
           فاصولياء
       </a>
   </div>
+
+   <!-- فلتر للشقق -->
+   <div class="text-center m-1">
+    <a href="view_category.html?category=بيض" class="text-decoration-none text-white btn btn-food-filter">
+        بيض
+    </a>
+</div>
+
    <!-- فلتر للشقق -->
    <div class="text-center m-1">
     <a href="view_category.html?category=فطائر" class="text-decoration-none text-white btn btn-food-filter">
@@ -303,6 +314,36 @@ width:100px;
     </div>
   </div>
 
+ <!-- end of header -->
+<section id="card_home" class="card_home">
+<div class="section-t" id="house">
+<div>
+<h4>جـــديدنا</h4>
+</div>
+
+<div class="view_all">
+<a href="view_category.html?category=جديدنا"><h2><i class="bi bi-arrow-left"></i></h2></a>
+</div>
+</div>
+
+<!--section-title starts-->
+<div class="main">
+<div class="container swiper">
+<div class="slider-wrapper">
+<div class="card-list swiper-wrapper" id="mynews">
+
+
+</div>
+</div>
+<div class="swiper-pagination"></div>
+<div class="swiper-slide-button swiper-button-prev"></div>
+<div class="swiper-slide-button swiper-button-next"></div>
+</div>
+</div>
+</div>
+</section>
+<!-- end card home -->
+ 
   <!-- end of header -->
 <section id="card_home" class="card_home">
 <div class="section-t" id="all">
@@ -511,6 +552,35 @@ width:100px;
 </div>
 </section>
 <!-- end card home -->
+
+<!-- home_card -->
+<section id="card_home" class="card_home">
+  <div class="section-t" id="house">
+  <div>
+  <h4>بــيض</h4>
+  </div>
+  
+  <div class="view_all">
+    <a href="view_category.html?category=بيض"><h2><i class="bi bi-arrow-left"></i></h2></a>
+  </div>
+  </div>
+  
+  <!--section-title starts-->
+  <div class="main">
+  <div class="container swiper">
+  <div class="slider-wrapper">
+  <div class="card-list swiper-wrapper" id="eggs">
+  
+  </div>
+  </div>
+  <div class="swiper-pagination"></div>
+  <div class="swiper-slide-button swiper-button-prev"></div>
+  <div class="swiper-slide-button swiper-button-next"></div>
+  </div>
+  </div>
+  </div>
+  </section>
+  <!-- end card home -->
 
 <!-- home_card -->
 <section id="card_home" class="card_home">
