--- a/view_category.html
+++ b/view_category.html
@@ -87,8 +87,6 @@ padding: 0;
   <div id="loader" class="loader">
 
   </div>
-
-
   <nav class="navbar navbar-expand navbar-light shadow-sm" style="background-color:white;">
     <div class="container-fluid">
       <a class="navbar-brand text-primary text-primary" href="index.html">
@@ -112,12 +110,12 @@ padding: 0;
   </nav>
 
  
-
   <div id="properties-container" class="d-flex flex-wrap justify-content-center"></div>
 
   <nav aria-label="Page navigation">
     <ul class="pagination" id="pagination"></ul>
   </nav>
+  <div id="que"></div>
 
   <script src="js/category.js"></script>
   
