--- a/index.html
+++ b/index.html
@@ -163,6 +163,7 @@ width:100px;
        الأصناف
           </a>
           <ul class="dropdown-menu text-end" aria-labelledby="navbarDropdown">
+             <li><a class="dropdown-item" href="view_category.html?category=جديدنا">جــــديدنا</a></li>
             <li><a class="dropdown-item" href="view_category.html?category=all">كل الأصناف</a></li>
             <li><a class="dropdown-item" href="view_category.html?category=اصناف مميزة">اصناف مميزة</a></li>
             <li><a class="dropdown-item" href="view_category.html?category=مطبق">مطبق</a></li>
@@ -171,7 +172,7 @@ width:100px;
 
             <li><a class="dropdown-item" href="view_category.html?category=فول">فول</a></li>
             <li><a class="dropdown-item" href="view_category.html?category=فاصولياء">فاصولياء</a></li>
-
+            <li><a class="dropdown-item" href="view_category.html?category=بيض">بــيض</a></li>
             <li><a class="dropdown-item" href="view_category.html?category=فطائر">فطائر</a></li>
             <li><a class="dropdown-item" href="view_category.html?category=وجبات منوعة">وجبات منوعة</a></li>
           </ul>
