--- a/view_category.html
+++ b/view_category.html
@@ -10,6 +10,8 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;600&display=swap">
   <link rel="stylesheet" href="css/st.css">
   <title>أفضل الأكلات الشعبية اليمنية في مكة | مطعم الزمن القديم | طلب الطعام أونلاين في مكة</title>
+<!-- Meta Data -->
+<title>أفضل الأكلات الشعبية اليمنية في مكة | مطعم الزمن القديم | طلب الطعام أونلاين في مكة</title>
 <meta name="keywords" content="مطعم مكة, أكلات شعبية يمنية, الطعام اليمني, أكلات يمنية تقليدية, مطعم الزمن القديم, طلب الطعام أونلاين مكة, المندي اليمني, السلتة اليمنية, الكبسة اليمنية, الشوا التلي اليمني, مطاعم مكة المكرمة">
 <meta name="author" content="مطعم الزمن القديم">
 <meta name="description" content="استمتع بأشهى الأكلات الشعبية اليمنية في مطعم الزمن القديم بمكة المكرمة. يقدم لك أطعمة تقليدية يمنية فريدة من نوعها، مثل المندي، السلتة، والكبسة، ويمكنك الآن طلب الطعام أونلاين وتوصيله إلى باب منزلك.">
@@ -19,14 +21,14 @@
 <meta name="robots" content="index, follow">
 
 <!-- Canonical Link -->
-<link rel="canonical" href="https://alzamanrestaurant.com.sa/">
+<link rel="canonical" href="https://zamanrestaurant.netlify.app/">
 
 <!-- Open Graph Meta Tags -->
 <meta property="og:locale" content="ar_AR">
 <meta property="og:type" content="website">
 <meta property="og:title" content="أفضل الأكلات الشعبية اليمنية في مكة | مطعم الزمن القديم">
 <meta property="og:description" content="مطعم الزمن القديم يقدم لك أفضل الأكلات الشعبية اليمنية في مكة المكرمة. اطلب الطعام الآن عبر موقعنا واستمتع بتجربة لا تُنسى من المندي، السلتة، والكبسة اليمنية.">
-<meta property="og:url" content="https://alzamanrestaurant.com.sa/">
+<meta property="og:url" content="https://zamanrestaurant.netlify.app/">
 <meta property="og:site_name" content="مطعم الزمن القديم">
 <meta property="og:image" content="https://i.postimg.cc/d0Yq5yKL/image.png">
 
@@ -35,15 +37,15 @@
 <meta name="twitter:description" content="مطعم الزمن القديم في مكة يقدم ألذ الأكلات الشعبية اليمنية. اطلب طعامك الآن أونلاين واستمتع بخدمة توصيل سريعة ومريحة إلى منزلك.">
 <meta name="twitter:title" content="أفضل الأكلات الشعبية اليمنية في مكة | مطعم الزمن القديم">
 <meta name="twitter:image" content="https://i.postimg.cc/d0Yq5yKL/image.png">
-<meta name="twitter:url" content="https://alzamanrestaurant.com.sa/">
+<meta name="twitter:url" content="https://zamanrestaurant.netlify.app/">
 
 <!-- Structured Data for Contact Information (Schema Markup) -->
 <script type="application/ld+json">
 {
-  "@context": "http://schema.org",
+  "@context": "https://zamanrestaurant.netlify.app/",
   "@type": "Organization",
   "name": "مطعم الزمن القديم",
-  "url": "https://alzamanrestaurant.com.sa/",
+  "url": "https://zamanrestaurant.netlify.app/",
   "logo": "https://i.postimg.cc/d0Yq5yKL/image.png",
   "contactPoint": [{
     "@type": "ContactPoint",
@@ -64,7 +66,7 @@
 <link rel="sitemap" type="application/xml" href="https://alzamanrestaurant.com.sa/sitemap.xml">
 
 <!-- Hreflang for multilingual support -->
-<link rel="alternate" href="https://alzamanrestaurant.com.sa/" hreflang="ar-sa">
+<link rel="alternate" href="https://zamanrestaurant.netlify.app/" hreflang="ar-sa">
 
 <!-- Favicon -->
 <link rel="icon" href="https://i.postimg.cc/d0Yq5yKL/image.png" type="image/png">
@@ -72,7 +74,6 @@
 
 <meta name="rating" content="General">
 <meta name="copyright" content="جميع الحقوق محفوظة لموقع مطعم الزمن القديم | © 2025">
-
   <style>
 body {
 font-family: 'Cairo', sans-serif;
