--- a/cart.html
+++ b/cart.html
@@ -3,13 +3,77 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>السلة</title>
+  <title>سلة المنتجات لمطعم الزمن القديم</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;600&display=swap">
   <link rel="stylesheet" href="css/st.css">
+  <!-- Meta Data -->
+<title>أفضل الأكلات الشعبية اليمنية في مكة | مطعم الزمن القديم | طلب الطعام أونلاين في مكة</title>
+<meta name="keywords" content="مطعم مكة, أكلات شعبية يمنية, الطعام اليمني, أكلات يمنية تقليدية, مطعم الزمن القديم, طلب الطعام أونلاين مكة, المندي اليمني, السلتة اليمنية, الكبسة اليمنية, الشوا التلي اليمني, مطاعم مكة المكرمة">
+<meta name="author" content="مطعم الزمن القديم">
+<meta name="description" content="استمتع بأشهى الأكلات الشعبية اليمنية في مطعم الزمن القديم بمكة المكرمة. يقدم لك أطعمة تقليدية يمنية فريدة من نوعها، مثل المندي، السلتة، والكبسة، ويمكنك الآن طلب الطعام أونلاين وتوصيله إلى باب منزلك.">
+
+<!-- Directives for Googlebot and other bots -->
+<meta name="googlebot" content="index, follow">
+<meta name="robots" content="index, follow">
+
+<!-- Canonical Link -->
+<link rel="canonical" href="https://zamanrestaurant.netlify.app/">
+
+<!-- Open Graph Meta Tags -->
+<meta property="og:locale" content="ar_AR">
+<meta property="og:type" content="website">
+<meta property="og:title" content="أفضل الأكلات الشعبية اليمنية في مكة | مطعم الزمن القديم">
+<meta property="og:description" content="مطعم الزمن القديم يقدم لك أفضل الأكلات الشعبية اليمنية في مكة المكرمة. اطلب الطعام الآن عبر موقعنا واستمتع بتجربة لا تُنسى من المندي، السلتة، والكبسة اليمنية.">
+<meta property="og:url" content="https://zamanrestaurant.netlify.app/">
+<meta property="og:site_name" content="مطعم الزمن القديم">
+<meta property="og:image" content="https://i.postimg.cc/d0Yq5yKL/image.png">
+
+<!-- Twitter Meta Tags -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:description" content="مطعم الزمن القديم في مكة يقدم ألذ الأكلات الشعبية اليمنية. اطلب طعامك الآن أونلاين واستمتع بخدمة توصيل سريعة ومريحة إلى منزلك.">
+<meta name="twitter:title" content="أفضل الأكلات الشعبية اليمنية في مكة | مطعم الزمن القديم">
+<meta name="twitter:image" content="https://i.postimg.cc/d0Yq5yKL/image.png">
+<meta name="twitter:url" content="https://zamanrestaurant.netlify.app/">
+
+<!-- Structured Data for Contact Information (Schema Markup) -->
+<script type="application/ld+json">
+{
+  "@context": "https://zamanrestaurant.netlify.app/",
+  "@type": "Organization",
+  "name": "مطعم الزمن القديم",
+  "url": "https://zamanrestaurant.netlify.app/",
+  "logo": "https://i.postimg.cc/d0Yq5yKL/image.png",
+  "contactPoint": [{
+    "@type": "ContactPoint",
+    "telephone": "966550852093",
+    "contactType": "customer service",
+    "areaServed": "SA",
+    "availableLanguage": "Arabic"
+  }],
+  "sameAs": [
+    "https://www.facebook.com/alzamanrestaurant",
+    "https://twitter.com/alzamanrestaurant",
+    "https://www.instagram.com/alzamanrestaurant"
+  ]
+}
+</script>
+
+<!-- Sitemap Link (helps search engines discover the sitemap) -->
+<link rel="sitemap" type="application/xml" href="https://alzamanrestaurant.com.sa/sitemap.xml">
+
+<!-- Hreflang for multilingual support -->
+<link rel="alternate" href="https://zamanrestaurant.netlify.app/" hreflang="ar-sa">
+
+<!-- Favicon -->
+<link rel="icon" href="https://i.postimg.cc/d0Yq5yKL/image.png" type="image/png">
+<link rel="apple-touch-icon" sizes="180x180" href="https://i.postimg.cc/d0Yq5yKL/image.png">
+
+<meta name="rating" content="General">
+<meta name="copyright" content="جميع الحقوق محفوظة لموقع مطعم الزمن القديم | © 2025">
   <style>
     body {
       font-family: 'Arial', sans-serif;
