--- a/details.html
+++ b/details.html
@@ -267,7 +267,7 @@
   <div class="container mt-2">
     <div class="row">
       <div class="col-md-6 col-12">
-        <img src="" id="product-image" alt="Product Image" class="product-image">
+        <img src="" id="product-image" alt="Product Image" class="product-image" alt="مطعم الزمن القديم افضل مطعم شعبي في السعودية ومكة المكرمة">
       </div>
       <div class="col-md-6 col-12 product-details">
         <h1 id="product-title" class="product-title">اسم المنتج</h1>
