--- a/details.html
+++ b/details.html
@@ -1,362 +1,181 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>تفاصيل المنتج</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link href="css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;600&display=swap">
-  <link rel="stylesheet" href="css/st.css">
-<!-- Meta Data -->
-<title>أفضل الأكلات الشعبية اليمنية في مكة | مطعم الزمن القديم | طلب الطعام أونلاين في مكة</title>
-<meta name="keywords" content="مطعم مكة, أكلات شعبية يمنية, الطعام اليمني, أكلات يمنية تقليدية, مطعم الزمن القديم, طلب الطعام أونلاين مكة, المندي اليمني, السلتة اليمنية, الكبسة اليمنية, الشوا التلي اليمني, مطاعم مكة المكرمة">
-<meta name="author" content="مطعم الزمن القديم">
-<meta name="description" content="استمتع بأشهى الأكلات الشعبية اليمنية في مطعم الزمن القديم بمكة المكرمة. يقدم لك أطعمة تقليدية يمنية فريدة من نوعها، مثل المندي، السلتة، والكبسة، ويمكنك الآن طلب الطعام أونلاين وتوصيله إلى باب منزلك.">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>تفاصيل المنتج | مطعم الزمن القديم</title>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
+<link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;600;700&display=swap" rel="stylesheet">
+<style>
+body { font-family: 'Cairo', sans-serif; background: #fefefe; color: #333; }
+.navbar { background: #fff; box-shadow: 0 4px 12px rgba(0,0,0,0.05); }
+.navbar-brand { font-weight: 700; color: #d35400 !important; }
 
-<!-- Directives for Googlebot and other bots -->
-<meta name="googlebot" content="index, follow">
-<meta name="robots" content="index, follow">
+.product-image { width: 100%; border-radius: 15px; object-fit: cover; max-height: 450px; box-shadow: 0 6px 20px rgba(0,0,0,0.1); }
+.product-title { font-size: 2rem; font-weight: 700; color: #333; margin-top: 20px; }
+.product-price { font-size: 1.6rem; font-weight: bold; color: #d35400; margin-top: 10px; }
+.product-description { margin-top: 20px; font-size: 1rem; color: #555; line-height: 1.6; }
+.input-group { max-width: 150px; margin-top: 20px; }
 
-<!-- Canonical Link -->
-<link rel="canonical" href="https://zamanrestaurant.netlify.app/">
+.btn-primary { background: #d35400; border: none; padding: 10px 20px; font-size: 1rem; }
+.btn-primary:hover { background: #b84300; }
+.btn-success { margin-top: 10px; }
 
-<!-- Open Graph Meta Tags -->
-<meta property="og:locale" content="ar_AR">
-<meta property="og:type" content="website">
-<meta property="og:title" content="أفضل الأكلات الشعبية اليمنية في مكة | مطعم الزمن القديم">
-<meta property="og:description" content="مطعم الزمن القديم يقدم لك أفضل الأكلات الشعبية اليمنية في مكة المكرمة. اطلب الطعام الآن عبر موقعنا واستمتع بتجربة لا تُنسى من المندي، السلتة، والكبسة اليمنية.">
-<meta property="og:url" content="https://zamanrestaurant.netlify.app/">
-<meta property="og:site_name" content="مطعم الزمن القديم">
-<meta property="og:image" content="https://i.postimg.cc/d0Yq5yKL/image.png">
+.comment-section { margin-top: 50px; background: #fff; padding: 20px; border-radius: 12px; box-shadow: 0 6px 18px rgba(0,0,0,0.08); }
+.comment { background: #f8f8f8; border-left: 5px solid #d35400; padding: 15px; margin-bottom: 15px; border-radius: 8px; }
+.comment-text { font-size: 1rem; color: #555; }
 
-<!-- Twitter Meta Tags -->
-<meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:description" content="مطعم الزمن القديم في مكة يقدم ألذ الأكلات الشعبية اليمنية. اطلب طعامك الآن أونلاين واستمتع بخدمة توصيل سريعة ومريحة إلى منزلك.">
-<meta name="twitter:title" content="أفضل الأكلات الشعبية اليمنية في مكة | مطعم الزمن القديم">
-<meta name="twitter:image" content="https://i.postimg.cc/d0Yq5yKL/image.png">
-<meta name="twitter:url" content="https://zamanrestaurant.netlify.app/">
+.comment-form textarea { width: 100%; border-radius: 8px; border: 1px solid #ddd; font-size: 1rem; padding: 10px; resize: vertical; }
+.comment-form button { background-color: #d35400; color: #fff; border: none; border-radius: 8px; padding: 8px 20px; margin-top: 10px; }
+.comment-form button:hover { background-color: #b84300; }
 
-<!-- Structured Data for Contact Information (Schema Markup) -->
-<script type="application/ld+json">
-{
-  "@context": "https://zamanrestaurant.netlify.app/",
-  "@type": "Organization",
-  "name": "مطعم الزمن القديم",
-  "url": "https://zamanrestaurant.netlify.app/",
-  "logo": "https://i.postimg.cc/d0Yq5yKL/image.png",
-  "contactPoint": [{
-    "@type": "ContactPoint",
-    "telephone": "966550852093",
-    "contactType": "customer service",
-    "areaServed": "SA",
-    "availableLanguage": "Arabic"
-  }],
-  "sameAs": [
-    "https://www.facebook.com/alzamanrestaurant",
-    "https://twitter.com/alzamanrestaurant",
-    "https://www.instagram.com/alzamanrestaurant"
-  ]
-}
-</script>
-
-<!-- Sitemap Link (helps search engines discover the sitemap) -->
-<link rel="sitemap" type="application/xml" href="https://alzamanrestaurant.com.sa/sitemap.xml">
-
-<!-- Hreflang for multilingual support -->
-<link rel="alternate" href="https://zamanrestaurant.netlify.app/" hreflang="ar-sa">
-
-<!-- Favicon -->
-<link rel="icon" href="https://i.postimg.cc/d0Yq5yKL/image.png" type="image/png">
-<link rel="apple-touch-icon" sizes="180x180" href="https://i.postimg.cc/d0Yq5yKL/image.png">
-
-<meta name="rating" content="General">
-<meta name="copyright" content="جميع الحقوق محفوظة لموقع مطعم الزمن القديم | © 2025">
-  <style>
-    body {
-      font-family: 'Cairo', sans-serif;
-      background-color: white;
-      color: #444;
-      margin: 0;
-      padding: 0;
-    }
-
-    .navbar {
-      background-color: white;
-      padding: 15px 0;
-    }
-
-    .navbar .navbar-brand {
-      font-size: 1.5rem;
-      color: #007bff;
-    }
-
-    .navbar .navbar-nav .nav-link {
-      font-size: 1.2rem;
-      color: #007bff;
-    }
-
-    .navbar .navbar-nav .nav-link.active {
-      font-weight: bold;
-    }
-
-    .navbar-toggler {
-      border-color: #007bff;
-    }
-
-    .product-image {
-      max-width: 100%;
-      height: auto;
-      border-radius: 8px;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    }
-
-    .product-title {
-      font-size: 2rem;
-      font-weight: bold;
-      color: #333;
-      margin-top: 20px;
-    }
-
-    .product-price {
-      font-size: 1.5rem;
-      color: #28a745;
-      font-weight: 600;
-      margin-top: 10px;
-    }
-
-    .product-description {
-      font-size: 1rem;
-      margin-top: 20px;
-      color: #555;
-    }
-
-    .product-details {
-      margin-top: 20px;
-    }
-
-    .btn-primary {
-      background-color: #007bff;
-      border-color: #007bff;
-      transition: background-color 0.3s ease;
-    }
-
-    .btn-primary:hover {
-      background-color: #0056b3;
-      border-color: #004085;
-    }
-
-    .btn-success {
-      background-color: #28a745;
-      border-color: #28a745;
-    }
-
-    .btn-success:hover {
-      background-color: #218838;
-      border-color: #1e7e34;
-    }
-
-    /* تخصيص الإشعار ليظهر في منتصف الرأس */
-    .toast-container {
-      position: fixed;
-      top: 0;
-      left: 50%;
-      transform: translateX(-50%);
-      z-index: 1050;
-      width: 80%;
-      max-width: 400px;
-      padding: 10px;
-    }
-
-    .toast {
-      min-width: 300px;
-      background-color: #28a745;
-      color: white;
-      font-size: 1.2rem;
-      text-align: center;
-      border-radius: 8px;
-      padding: 20px;
-      box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.2);
-    }
-
-    .toast-header {
-      background-color: #218838;
-      color: white;
-      font-weight: bold;
-    }
-
-    .toast-body {
-      font-size: 1rem;
-    }
-
-    .comment-section {
-      margin-top: 40px;
-      background-color: #ffffff;
-      padding: 20px;
-      border-radius: 10px;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    }
-
-    .comment {
-      background-color: #f1f1f1;
-      border-left: 5px solid #28a745;
-      padding: 15px;
-      margin-bottom: 15px;
-      border-radius: 8px;
-      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    }
-
-    .comment .comment-author {
-      font-weight: bold;
-      color: #007bff;
-    }
-
-    .comment .comment-text {
-      margin-top: 10px;
-      font-size: 1.1rem;
-      color: #555;
-    }
-
-    .comment-form {
-      margin-top: 30px;
-    }
-
-    .comment-form textarea {
-      border-radius: 8px;
-      border: 1px solid #ddd;
-      font-size: 1.1rem;
-      padding: 10px;
-    }
-
-    .comment-form button {
-      background-color: #28a745;
-      color: #fff;
-      border-radius: 8px;
-      border: none;
-      padding: 10px 20px;
-      margin-top: 10px;
-    }
-
-    .comment-form button:hover {
-      background-color: #218838;
-    }
-  </style>
+.toast-container { position: fixed; top: 20px; left: 50%; transform: translateX(-50%); z-index: 1050; width: 80%; max-width: 400px; }
+.toast { background-color: #28a745; color: #fff; border-radius: 8px; padding: 15px; font-size: 1rem; }
+.toast-header { background-color: #218838; color: white; font-weight: bold; }
+</style>
 </head>
 <body>
-  <nav class="navbar navbar-expand navbar-light shadow-sm">
-    <div class="container-fluid">
-      <a class="navbar-brand text-primary" href="index.html">
-        الرئيسية 
-        <i class="bi bi-arrow-left-circle"></i>
-      </a>
-  
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-  
-      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-        <div class="navbar-nav ms-auto">
-          <a class="nav-link active fs-5 text-primary" id="category-title" aria-current="page" href="#">تفاصيل المنتج</a>
-        </div>
-      </div>
+
+<nav class="navbar navbar-expand-lg">
+  <div class="container">
+    <a class="navbar-brand" href="index.html"><i class="bi bi-house-door"></i> الرئيسية</a>
+    <span class="ms-auto fs-5">تفاصيل المنتج</span>
+  </div>
+</nav>
+
+<div class="container mt-5">
+  <div class="row g-4">
+    <div class="col-md-6">
+      <img id="product-image" src="" alt="صورة المنتج" class="product-image">
     </div>
-  </nav>
+    <div class="col-md-6">
+      <h1 id="product-title" class="product-title">اسم المنتج</h1>
+      <p id="product-price" class="product-price" data-price="0">0 ريال</p>
+      <p id="product-description" class="product-description">وصف المنتج</p>
 
-  <div class="container mt-2">
-    <div class="row">
-      <div class="col-md-6 col-12">
-        <img src="" id="product-image" alt="Product Image" class="product-image" alt="مطعم الزمن القديم افضل مطعم شعبي في السعودية ومكة المكرمة">
+      <div class="input-group">
+        <span class="input-group-text">الكمية</span>
+        <input type="number" id="quantity" class="form-control" value="1" min="1" oninput="updatePrice()">
       </div>
-      <div class="col-md-6 col-12 product-details">
-        <h1 id="product-title" class="product-title">اسم المنتج</h1>
-        <p id="product-price" class="product-price">السعر</p>
-        <p id="product-description" class="product-description">الوصف</p>
 
-        <form method="POST" action="" class="d-flex">
-          <input type="hidden" name="product_id" id="product-id" value="">
-          <div class="input-group mb-3" style="max-width: 150px;">
-            <span class="input-group-text">الكمية</span>
-            <input type="number" name="quantity" id="quantity" value="1" min="1" class="form-control" oninput="updatePrice()">
-          </div>
-        </form>
-        <button type="button" class="btn btn-primary align-self-center" onclick="addToCart()">أضف إلى السلة</button><br>
-        <a href="cart.html" class="btn btn-success mt-3">انتقل إلى السلة</a>
-      </div>
+      <button class="btn btn-primary mt-3" onclick="addToCart()">أضف إلى السلة</button>
+      <a href="cart.html" class="btn btn-success mt-3">انتقل إلى السلة</a>
     </div>
   </div>
 
-  <div class="container mt-5">
-    <div class="comment-section">
-      <h3>التعليقات</h3>
-      <!-- سيتم إضافة التعليقات هنا ديناميكيًا -->
-      <div id="comments-container"></div>
+  <!-- قسم التعليقات -->
+  <div class="comment-section">
+    <h3>التعليقات</h3>
+    <div id="comments-container"></div>
 
-      <!-- نموذج إضافة تعليق -->
-      <div class="comment-form">
-        <textarea id="comment-text" class="form-control" rows="4" placeholder="اكتب تعليقك هنا..."></textarea>
-        <button class="btn btn-success mt-2" onclick="addNewComment()">إضافة تعليق</button>
-      </div>
+    <div class="comment-form">
+      <textarea id="comment-text" rows="4" placeholder="اكتب تعليقك هنا..."></textarea>
+      <button onclick="addNewComment()">إضافة تعليق</button>
     </div>
   </div>
- 
-  <!-- Toast Notification -->
-  <div class="toast-container">
-    <div id="toast" class="toast hide" role="alert" aria-live="assertive" aria-atomic="true">
-      <div class="toast-header">
-        <strong class="me-auto">إشعار</strong>
-        <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
-      </div>
-      <div class="toast-body">
-        تم إضافة المنتج إلى السلة بنجاح!
-      </div>
+</div>
+
+<!-- Toast Notification -->
+<div class="toast-container">
+  <div id="toast" class="toast hide" role="alert" aria-live="assertive" aria-atomic="true">
+    <div class="toast-header">
+      <strong class="me-auto">إشعار</strong>
+      <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+    </div>
+    <div class="toast-body">
+      تم إضافة المنتج إلى السلة بنجاح!
     </div>
   </div>
+</div>
 
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"></script>
-  <script src="js/details.js"></script>
-</body>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 <script>
- function addNewComment() {
-  // الحصول على التعليق
-  const commentText = document.getElementById("comment-text").value;
+function updatePrice() {
+  const quantity = parseInt(document.getElementById('quantity').value);
+  const price = parseFloat(document.getElementById('product-price').getAttribute('data-price'));
+  const totalPrice = price * quantity;
+  document.getElementById('product-price').innerHTML = `${totalPrice.toFixed(2)} <img src="img/ryal.png" style="width: 20px; height: 20px; vertical-align: middle;">`;
+}
+
+function addToCart() {
   const productId = document.getElementById('product-id').value;
+  const productTitle = document.getElementById('product-title').innerText;
+  const price = parseFloat(document.getElementById('product-price').getAttribute('data-price'));
+  const quantity = parseInt(document.getElementById('quantity').value);
+  const totalPrice = price * quantity;
+  const productImage = document.getElementById('product-image').src;
 
-  // التحقق من أن التعليق ليس فارغاً
-  if (commentText.trim() !== "") {
-    // التحقق من أن معرف المنتج ليس فارغاً
-    if (productId.trim() !== "") {
-      // هنا نقوم بتشفير التعليق بحيث لا يحتوي على أحرف قد تسبب مشاكل في الرابط
-      const encodedComment = encodeURIComponent(commentText);
-
-      // بناء الرابط الجديد مع المتغيرات
-      const newUrl = `https://mtamzman.infy.uk/sendcomment.html?product_id=${productId}&comment=${encodedComment}`;
-
-      console.log("Redirecting to URL: ", newUrl);  // طباعة الرابط المتكون للتحقق منه
-
-      // الانتقال إلى الرابط الجديد مع المتغيرات
-      window.location.replace(newUrl);
-    } else {
-      alert("يرجى تحديد معرف المنتج.");
-    }
-  } else {
-    alert("يرجى كتابة تعليق قبل الإرسال");
-  }
+  const cartItem = { productId, productTitle, price, quantity, totalPrice, productImage };
+  let cart = JSON.parse(localStorage.getItem('cart')) || [];
+  cart.push(cartItem);
+  localStorage.setItem('cart', JSON.stringify(cart));
+  showToast();
 }
 
-/*
-function showToast(message, type) {
-  const toastContainer = document.createElement('div');
-  toastContainer.className = `toast toast-${type}`;
-  toastContainer.textContent = message;
-  document.body.appendChild(toastContainer);
-
-  setTimeout(() => {
-    toastContainer.remove();
-  }, 3000); // إزالة الإشعار بعد 3 ثوانٍ
+function showToast() {
+  const toastElement = document.getElementById('toast');
+  const toast = new bootstrap.Toast(toastElement);
+  toast.show();
 }
-*/
+
+function fetchData() {
+  const url = new URL(window.location.href);
+  const productId = new URLSearchParams(url.search).get('fId');
+
+  fetch('info.json')
+    .then(response => response.json())
+    .then(data => {
+      const product = data.items.find(item => item.id === productId);
+      if (product) {
+        document.getElementById('product-id')?.remove(); // إزالة إذا موجودة قديمة
+        const inputHidden = document.createElement('input');
+        inputHidden.type = "hidden";
+        inputHidden.id = "product-id";
+        inputHidden.value = product.id;
+        document.body.appendChild(inputHidden);
+
+        document.getElementById('product-title').innerText = product.food_name;
+        document.getElementById('product-price').innerText = `${product.price} ريال`;
+        document.getElementById('product-price').setAttribute('data-price', product.price);
+        document.getElementById('product-description').innerText = product.description || 'لا يوجد وصف لهذا المنتج.';
+        document.getElementById('product-image').src = product.images;
+        updatePrice();
+      } else { alert('لم يتم العثور على المنتج.'); }
+    }).catch(error => console.error("خطأ في البيانات: ", error));
+}
+
+// تحميل التعليقات
+function loadComments() {
+  const url = new URL(window.location.href);
+  const productId = new URLSearchParams(url.search).get('fId');
+  fetch('comments.json')
+    .then(res => res.json())
+    .then(comments => {
+      const commentsContainer = document.getElementById('comments-container');
+      commentsContainer.innerHTML = '';
+      if (comments[productId]) {
+        comments[productId].forEach(comment => {
+          const div = document.createElement('div');
+          div.className = "comment";
+          div.innerHTML = `<div class="comment-text">${comment.text}</div>`;
+          commentsContainer.appendChild(div);
+        });
+      }
+    }).catch(err => console.error(err));
+}
+
+// إضافة تعليق جديد
+function addNewComment() {
+  const commentText = document.getElementById('comment-text').value;
+  const productId = document.getElementById('product-id').value;
+  if (!commentText.trim()) { alert("اكتب تعليقك أولاً"); return; }
+  const encodedComment = encodeURIComponent(commentText);
+  const newUrl = `sendcomment.html?product_id=${productId}&comment=${encodedComment}`;
+  window.location.href = newUrl;
+}
+
+window.onload = function() { fetchData(); loadComments(); }
 </script>
+</body>
 </html>
