--- a/index.html
+++ b/index.html
@@ -2,73 +2,74 @@
 <html lang="ar" dir="rtl">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
- <!-- bootstrap css -->
- <link rel = "stylesheet" href = "css/bootstrap.min.css">
- <!-- custom css -->
-<link rel="stylesheet" href="css/st.css">
-    <!-- Bootstrap CSS -->
-<!-- Bootstrap CSS -->
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
-<script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
-<!-- Meta Data -->
-<title>أفضل الأكلات الشعبية اليمنية في مكة | مطعم الزمن القديم | طلب الطعام أونلاين في مكة</title>
-<meta name="keywords" content="مطعم مكة, أكلات شعبية يمنية, الطعام اليمني, أكلات يمنية تقليدية, مطعم الزمن القديم, طلب الطعام أونلاين مكة, المندي اليمني, السلتة اليمنية, الكبسة اليمنية, الشوا التلي اليمني, مطاعم مكة المكرمة">
-<meta name="author" content="مطعم الزمن القديم">
-<meta name="description" content="استمتع بأشهى الأكلات الشعبية اليمنية في مطعم الزمن القديم بمكة المكرمة. يقدم لك أطعمة تقليدية يمنية فريدة من نوعها، مثل المندي، السلتة، والكبسة، ويمكنك الآن طلب الطعام أونلاين وتوصيله إلى باب منزلك.">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<!-- Directives for Googlebot and other bots -->
-<meta name="googlebot" content="index, follow">
-<meta name="robots" content="index, follow">
+  <!-- Title & Description -->
+  <title>أفضل الأكلات الشعبية اليمنية في مكة | مطعم الزمن القديم | طلب الطعام أونلاين في مكة</title>
+  <meta name="description" content="استمتع بأشهى الأكلات الشعبية اليمنية في مطعم الزمن القديم بمكة المكرمة. يقدم لك أطعمة تقليدية يمنية فريدة من نوعها، مثل المندي، السلتة، والكبسة، ويمكنك الآن طلب الطعام أونلاين وتوصيله إلى باب منزلك.">
+  <meta name="author" content="مطعم الزمن القديم">
+  <meta name="robots" content="index, follow">
+  <meta name="googlebot" content="index, follow">
 
-<!-- Canonical Link -->
-<link rel="canonical" href="https://alzamanrestaurant.com.sa/">
+  <!-- Canonical -->
+  <link rel="canonical" href="https://alzamanrestaurant.com.sa/">
 
-<!-- Open Graph Meta Tags -->
-<meta property="og:locale" content="ar_AR">
-<meta property="og:type" content="website">
-<meta property="og:title" content="أفضل الأكلات الشعبية اليمنية في مكة | مطعم الزمن القديم">
-<meta property="og:description" content="مطعم الزمن القديم يقدم لك أفضل الأكلات الشعبية اليمنية في مكة المكرمة. اطلب الطعام الآن عبر موقعنا واستمتع بتجربة لا تُنسى من المندي، السلتة، والكبسة اليمنية.">
-<meta property="og:url" content="https://alzamanrestaurant.com.sa/">
-<meta property="og:site_name" content="مطعم الزمن القديم">
-<meta property="og:image" content="https://i.postimg.cc/d0Yq5yKL/image.png">
+  <!-- CSS Libraries -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
 
-<!-- Twitter Meta Tags -->
-<meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:description" content="مطعم الزمن القديم في مكة يقدم ألذ الأكلات الشعبية اليمنية. اطلب طعامك الآن أونلاين واستمتع بخدمة توصيل سريعة ومريحة إلى منزلك.">
-<meta name="twitter:title" content="أفضل الأكلات الشعبية اليمنية في مكة | مطعم الزمن القديم">
-<meta name="twitter:image" content="https://i.postimg.cc/d0Yq5yKL/image.png">
-<meta name="twitter:url" content="https://alzamanrestaurant.com.sa/">
+  <!-- Custom CSS -->
+  <link rel="stylesheet" href="css/st.css">
 
-<!-- Structured Data for Contact Information (Schema Markup) -->
-<script type="application/ld+json">
-{
-  "@context": "http://schema.org",
-  "@type": "Organization",
-  "name": "مطعم الزمن القديم",
-  "url": "https://alzamanrestaurant.com.sa/",
-  "logo": "https://i.postimg.cc/d0Yq5yKL/image.png",
-  "contactPoint": [{
-    "@type": "ContactPoint",
-    "telephone": "966550852093",
-    "contactType": "customer service",
-    "areaServed": "SA",
-    "availableLanguage": "Arabic"
-  }],
-  "sameAs": [
-    "https://www.facebook.com/alzamanrestaurant",
-    "https://twitter.com/alzamanrestaurant",
-    "https://www.instagram.com/alzamanrestaurant"
-  ]
-}
-</script>
+  <!-- JS Libraries -->
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js" crossorigin="anonymous"></script>
 
-<!-- Sitemap Link (helps search engines discover the sitemap) -->
-<link rel="sitemap" type="application/xml" href="https://alzamanrestaurant.com.sa/sitemap.xml">
+  <!-- Open Graph -->
+  <meta property="og:locale" content="ar_SA">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="أفضل الأكلات الشعبية اليمنية في مكة | مطعم الزمن القديم">
+  <meta property="og:description" content="مطعم الزمن القديم يقدم لك أفضل الأكلات الشعبية اليمنية في مكة المكرمة. اطلب الطعام الآن عبر موقعنا واستمتع بتجربة لا تُنسى من المندي، السلتة، والكبسة اليمنية.">
+  <meta property="og:url" content="https://alzamanrestaurant.com.sa/">
+  <meta property="og:site_name" content="مطعم الزمن القديم">
+  <meta property="og:image" content="https://i.postimg.cc/d0Yq5yKL/image.png">
 
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="أفضل الأكلات الشعبية اليمنية في مكة | مطعم الزمن القديم">
+  <meta name="twitter:description" content="مطعم الزمن القديم في مكة يقدم ألذ الأكلات الشعبية اليمنية. اطلب طعامك الآن أونلاين واستمتع بخدمة توصيل سريعة ومريحة إلى منزلك.">
+  <meta name="twitter:image" content="https://i.postimg.cc/d0Yq5yKL/image.png">
+  <meta name="twitter:url" content="https://alzamanrestaurant.com.sa/">
+
+  <!-- Schema Markup -->
+  <script type="application/ld+json">
+  {
+    "@context": "http://schema.org",
+    "@type": "Organization",
+    "name": "مطعم الزمن القديم",
+    "url": "https://alzamanrestaurant.com.sa/",
+    "logo": "https://i.postimg.cc/d0Yq5yKL/image.png",
+    "contactPoint": [{
+      "@type": "ContactPoint",
+      "telephone": "966550852093",
+      "contactType": "customer service",
+      "areaServed": "SA",
+      "availableLanguage": "Arabic"
+    }],
+    "sameAs": [
+      "https://www.facebook.com/alzamanrestaurant",
+      "https://twitter.com/alzamanrestaurant",
+      "https://www.instagram.com/alzamanrestaurant"
+    ]
+  }
+  </script>
+
+  <!-- Sitemap -->
+  <link rel="sitemap" type="application/xml" href="https://alzamanrestaurant.com.sa/sitemap.xml">
+
+  <!-- Favicon -->
+  <link rel="icon" href="https://alzamanrestaurant.com.sa/favicon.ico" type="image/x-icon">
 
 <!-- Animate.css CDN لإضافة حركة للنصوص -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
