--- a/index.html
+++ b/index.html
@@ -1,75 +1,16 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
-<meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>مطعمي — الصفحة الرئيسية</title>
 
-  <!-- Title & Description -->
-  <title>أفضل الأكلات الشعبية اليمنية في مكة | مطعم الزمن القديم | طلب الطعام أونلاين في مكة</title>
-  <meta name="description" content="استمتع بأشهى الأكلات الشعبية اليمنية في مطعم الزمن القديم بمكة المكرمة. يقدم لك أطعمة تقليدية يمنية فريدة من نوعها، مثل المندي، السلتة، والكبسة، ويمكنك الآن طلب الطعام أونلاين وتوصيله إلى باب منزلك.">
-  <meta name="author" content="مطعم الزمن القديم">
-  <meta name="robots" content="index, follow">
-  <meta name="googlebot" content="index, follow">
+  <!-- Google Font Tajawal -->
+  <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@300;400;500;700;800&display=swap" rel="stylesheet">
 
-  <!-- Canonical -->
-  <link rel="canonical" href="https://alzamanrestaurant.com.sa/">
-
-  <!-- CSS Libraries -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
-
-  <!-- Custom CSS -->
-  <link rel="stylesheet" href="css/st.css">
-
-  <!-- JS Libraries -->
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js" crossorigin="anonymous"></script>
-
-  <!-- Open Graph -->
-  <meta property="og:locale" content="ar_SA">
-  <meta property="og:type" content="website">
-  <meta property="og:title" content="أفضل الأكلات الشعبية اليمنية في مكة | مطعم الزمن القديم">
-  <meta property="og:description" content="مطعم الزمن القديم يقدم لك أفضل الأكلات الشعبية اليمنية في مكة المكرمة. اطلب الطعام الآن عبر موقعنا واستمتع بتجربة لا تُنسى من المندي، السلتة، والكبسة اليمنية.">
-  <meta property="og:url" content="https://alzamanrestaurant.com.sa/">
-  <meta property="og:site_name" content="مطعم الزمن القديم">
-  <meta property="og:image" content="https://i.postimg.cc/d0Yq5yKL/image.png">
-
-  <!-- Twitter -->
-  <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="أفضل الأكلات الشعبية اليمنية في مكة | مطعم الزمن القديم">
-  <meta name="twitter:description" content="مطعم الزمن القديم في مكة يقدم ألذ الأكلات الشعبية اليمنية. اطلب طعامك الآن أونلاين واستمتع بخدمة توصيل سريعة ومريحة إلى منزلك.">
-  <meta name="twitter:image" content="https://i.postimg.cc/d0Yq5yKL/image.png">
-  <meta name="twitter:url" content="https://alzamanrestaurant.com.sa/">
-
-  <!-- Schema Markup -->
-  <script type="application/ld+json">
-  {
-    "@context": "http://schema.org",
-    "@type": "Organization",
-    "name": "مطعم الزمن القديم",
-    "url": "https://alzamanrestaurant.com.sa/",
-    "logo": "https://i.postimg.cc/d0Yq5yKL/image.png",
-    "contactPoint": [{
-      "@type": "ContactPoint",
-      "telephone": "966550852093",
-      "contactType": "customer service",
-      "areaServed": "SA",
-      "availableLanguage": "Arabic"
-    }],
-    "sameAs": [
-      "https://www.facebook.com/alzamanrestaurant",
-      "https://twitter.com/alzamanrestaurant",
-      "https://www.instagram.com/alzamanrestaurant"
-    ]
-  }
-  </script>
-
-  <!-- Sitemap -->
-  <link rel="sitemap" type="application/xml" href="https://alzamanrestaurant.com.sa/sitemap.xml">
-
-  <!-- Favicon -->
-  <link rel="icon" href="https://alzamanrestaurant.com.sa/favicon.ico" type="image/x-icon">
+  <!-- Bootstrap CSS + Icons -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
 
 <!-- Animate.css CDN لإضافة حركة للنصوص -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
